# goldcrest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/diagrams/: layer_diagram.xml  workflow_diagram.xml
doc/guidelines/: architecture.md  code.md  documentation.md  testing.md  workflow.md
include/central_bus/: central_bus.hpp
src/: CMakeLists.txt
src/central_bus/: central_bus.cpp
tst/: CMakeLists.txt  test.cpp
tst/central_bus/: central_bus_tests.cpp
